--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "messanger",
   "version": "1.0.0",
   "description": "",
-  "source": "index.ts",
+  "source": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel index.html",
