--- a/.tsconfig.json
+++ b/.tsconfig.json
@@ -6,8 +6,9 @@
     "module": "commonjs",
     "strictNullChecks": true,
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "esModuleInterop": true
   }
 }
