--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
     "eslint": "^8.20.0",
+    "stylelint": "^14.9.1",
     "parcel": "^2.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
